[gd_scene load_steps=7 format=3 uid="uid://clwuud8tkwo1y"]

[ext_resource type="Script" path="res://scripts/Rhythm.gd" id="1_egyi7"]
[ext_resource type="AudioStream" uid="uid://bfidgyt6htg7r" path="res://audio/temp/polyrhythm_game_note1.wav" id="2_mral2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpejc"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3lrl"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k182n"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qf124"]
bg_color = Color(0, 0, 0, 0.478431)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_egyi7")

[node name="RhythmCircle" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -95.0
offset_right = 95.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(95, 95)
theme_override_styles/panel = SubResource("StyleBoxFlat_bpejc")

[node name="Polymark1" type="Panel" parent="RhythmCircle"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = -24.0
offset_right = 25.0
offset_bottom = 26.0
grow_horizontal = 2
pivot_offset = Vector2(25, 25)
theme_override_styles/panel = SubResource("StyleBoxFlat_r3lrl")

[node name="Polymark2" type="Panel" parent="RhythmCircle"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -25.0
offset_right = 24.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(25, 25)
theme_override_styles/panel = SubResource("StyleBoxFlat_r3lrl")

[node name="Polymark3" type="Panel" parent="RhythmCircle"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -25.0
offset_right = 26.0
offset_bottom = 25.0
grow_vertical = 2
pivot_offset = Vector2(25, 25)
theme_override_styles/panel = SubResource("StyleBoxFlat_r3lrl")

[node name="Polymark4" type="Panel" parent="RhythmCircle"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -26.0
offset_right = 25.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(25, 25)
theme_override_styles/panel = SubResource("StyleBoxFlat_r3lrl")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -23.5
offset_right = 22.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_k182n")
text = "4"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = 221.0
offset_right = 211.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
min_value = 60.0
max_value = 120.0
value = 60.0

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -35.5
offset_right = 20.0
offset_bottom = -12.5
grow_horizontal = 2
grow_vertical = 2
text = "60 BPM"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mral2")

[node name="TimeNote" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -195.5
offset_right = 20.0
offset_bottom = -172.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51

[node name="Perfect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -255.0
offset_right = 25.0
offset_bottom = -205.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qf124")

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
